<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.resistencia.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/fondi">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:text="@string/resistencia"
        android:textSize="25dp"
        android:gravity="center"
        android:textStyle="bold"

        android:textColor="@color/colorAccent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:text="@string/valor"
        android:textSize="30dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:text="1K +5%"
        android:textSize="28dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:id="@+id/tResistencia"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_weight="2.5"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="79dp"
            android:layout_height="10dp"
            android:layout_marginTop="48dp"
            android:background="@color/gray"></LinearLayout>
        <LinearLayout
            android:layout_width="16dp"
            android:layout_height="44dp"
            android:layout_marginTop="32dp"
            android:background="@color/resist"></LinearLayout>

        <LinearLayout
            android:id="@+id/lBanda1"
            android:layout_width="11dp"
            android:layout_height="44dp"
            android:layout_marginTop="32dp"
            android:background="@color/saddlebrown"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="38dp"
            android:layout_marginTop="35dp"
            android:background="@color/resist"></LinearLayout>

        <LinearLayout
            android:id="@+id/lBanda2"
            android:layout_width="11dp"
            android:layout_height="38dp"
            android:layout_marginTop="35dp"
            android:background="@color/black"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="38dp"
            android:layout_marginTop="35dp"
            android:background="@color/resist"></LinearLayout>

        <LinearLayout
            android:id="@+id/lBanda3"
            android:layout_width="11dp"
            android:layout_height="37dp"
            android:layout_marginTop="35dp"
            android:background="@color/red"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="16dp"
            android:layout_height="38dp"
            android:layout_marginTop="35dp"
            android:background="@color/resist"></LinearLayout>

        <LinearLayout
            android:id="@+id/lTolerancia"
            android:layout_width="11dp"
            android:layout_height="44dp"
            android:layout_marginTop="32dp"
            android:background="@color/goldenrod"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="16dp"
            android:layout_height="44dp"
            android:layout_marginTop="32dp"
            android:background="@color/resist"></LinearLayout>

        <LinearLayout
            android:layout_width="79dp"
            android:layout_height="10dp"
            android:layout_marginTop="48dp"
            android:background="@color/gray"></LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20dp">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/banda1"
            android:textSize="18dp"
            android:checked="true"
            android:gravity="center"
            android:textColor="@color/orangered"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/rBanda1"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/banda2"
            android:textSize="18dp"
            android:gravity="center"
            android:textColor="@color/orangered"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/rBanda2"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/banda3"
            android:textSize="18dp"
            android:gravity="center"
            android:textColor="@color/orangered"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/rBanda3"/>
      </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/tolerancia"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginLeft="100sp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/sTolerancia"
            style="@style/mySpinnerItemStyle"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="50dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="NegroClick"></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/saddlebrown"
            android:onClick="MarronClick"></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red"
            android:onClick="RojoClick"></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange"
            android:onClick="NaranjaClick"></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:onClick="AmarilloClick"></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green"
            android:onClick="VerdeClick"></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:onClick="AzulClick"></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/purple"
            android:onClick="MoradoClick"></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray"
            android:onClick="GrisClick"></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/whitesmoke"
            android:onClick="BlancoClick"></LinearLayout>

    </LinearLayout>


</LinearLayout>
